force-app/main/default/objects/Template_Items__c/Template_Items__c.object-meta.xml
<CustomObject>
    <label>Template Item</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Template Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>