force-app/main/default/objects/Template_Items__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>actual start date</description>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>