force-app/main/default/objects/Template_Items__c/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <description>expected start date</description>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>