force-app/main/default/objects/Template_Items__c/fields/IsTask__c.field-meta.xml
<CustomField>
    <fullName>IsTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTask</label>
    <type>Checkbox</type>
</CustomField>