force-app/main/default/objects/Template_Items__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Sub-Milestone</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Sub-Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>