force-app/main/default/objects/Template_Items__c/fields/OpportunityStatus__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStatus__c</fullName>
    <label>OpportunityStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>