force-app/main/default/objects/Template_Items__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Id</label>
    <referenceTo>Template_Items__c</referenceTo>
    <relationshipLabel>Template Items</relationshipLabel>
    <relationshipName>Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>