force-app/main/default/objects/Template_Items__c/fields/Predecessor__c.field-meta.xml
<CustomField>
    <fullName>Predecessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predecessor</label>
    <referenceTo>Template_Items__c</referenceTo>
    <relationshipLabel>Template Items (Predecessor)</relationshipLabel>
    <relationshipName>Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>