force-app/main/default/objects/Template_Items__c/fields/Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sr_No__c</fullName>
    <label>Sr. No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>