force-app/main/default/objects/Template_Items__c/fields/Successor__c.field-meta.xml
<CustomField>
    <fullName>Successor__c</fullName>
    <label>Successor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>