force-app/main/default/objects/Template_Items__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template Items</relationshipLabel>
    <relationshipName>Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>