force-app/main/default/objects/Template_Items__c/fields/Titan_SNo_Predecessor__c.field-meta.xml
<CustomField>
    <fullName>Titan_SNo_Predecessor__c</fullName>
    <label>Titan SNo Predecessor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>