force-app/main/default/objects/Template_Items__c/validationRules/Serail_Number_Mandatory_for_Milestone.validationRule-meta.xml
<ValidationRule>
    <fullName>Serail_Number_Mandatory_for_Milestone</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Item_Type__c, &apos;Milestone&apos;) &amp;&amp; ISBLANK(Sr_No__c)</errorConditionFormula>
    <errorDisplayField>Sr_No__c</errorDisplayField>
    <errorMessage>Please enter serial number</errorMessage>
</ValidationRule>